--- a/Admin_Role.html
+++ b/Admin_Role.html
@@ -455,7 +455,7 @@ margin-left: auto !important;
         <button class="btn btn-lg btn-success btn-block" name="update" id="update">Update</button>
         </div>
         <br>
-     <div class="input-group" id="testdiv">            			
+     <div class="input-group" id="testdiv" style="width:100%">            			
 		  <div class="table-responsive">																										
 		  <table class="table borderless table-condensed" data-show-header="false"  id="roles" >	                        
 		  </table>  	
