--- a/drdesk.html
+++ b/drdesk.html
@@ -17,6 +17,9 @@
 <script src="jquery_alert_files/jquery.alerts.js" type="text/javascript"></script>
 <script type="text/javascript" src="js/jquery.validate.min.js"></script>
 <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
+<link rel="stylesheet" type="text/css" href="css/jquery.datetimepicker.css"/ >
+
+<script src="css/jquery.datetimepicker.js"></script>
 <script type="text/javascript">
 $(document).ready(function () {
 	var userid = localStorage.getItem('userid');
@@ -26,7 +29,7 @@ $(document).ready(function () {
 	} else {
 	var username=localStorage.getItem('username');
 	  var s1="Welcome ";
-	  jQuery('#datetimepicker').datetimepicker();
+	  $('#datetimepicker').datetimepicker();
     $("#user").text(s1.concat(username));
 	$('.selectpicker').selectpicker();	 
 	 $('.dp').on('change', function () {
@@ -644,7 +647,5 @@ margin-left: auto !important;
 
 
 </body>
-<link rel="stylesheet" type="text/css" href="css/jquery.datetimepicker.css"/ >
 
-<script src="css/jquery.datetimepicker.js"></script>
 </html>                                		
