--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ else if(roleid==11){
   </table>
   <table>
    <tr style="width: 100%"><td width="25%">
-   <img src="images/leave.png" alt="Mountain View" align="middle" height="52" width="72">
+   <img src="images/Leave.png" alt="Mountain View" align="middle" height="52" width="72">
    </td><td width="75%">  
    <label id="news" style="color:black;">Dr.Vasi is on leave</label>
    </tr>
