--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<script type="text/javascript">
 		$(document).ready(function(){	
 			localStorage.setItem('userid',0);
-			 wcf = "http://192.168.0.70/www/HospitalAutomation/smarthosp";
+			 wcf = "http:// 107.21.239.57/h-aut";
 			 localStorage.setItem('WcfURL', wcf);
 			$.ajax({
 			    type: "GET",
